--- a/app/src/main/res/layout/activity_main_supplier.xml
+++ b/app/src/main/res/layout/activity_main_supplier.xml
@@ -10,7 +10,7 @@
     tools:context="Activities.MainSupplier">
 
     <TextView
-        android:id="@+id/kkhgh"
+        android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello! what do you want to do?"
@@ -20,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148" />
+        app:layout_constraintVertical_bias="0.16" />
 
     <Button
         android:id="@+id/update"
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:text="update detalis"
         android:textSize="20dp"
+        app:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:text="Clients list"
         android:textSize="20dp"
+        app:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +54,7 @@
         android:layout_height="wrap_content"
         android:text="stock"
         android:textSize="20dp"
+        app:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.534"
@@ -65,11 +68,22 @@
         android:layout_height="64dp"
         android:text="chat with clients"
         android:textSize="20dp"
+        app:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.863" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:textSize="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="-188dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
