--- a/app/src/main/res/layout/activity_product_details_client.xml
+++ b/app/src/main/res/layout/activity_product_details_client.xml
@@ -7,7 +7,20 @@
     tools:context="Activities.ProductDetails">
 
     <TextView
-        android:id="@+id/pname"
+        android:id="@+id/textView8"
+        android:layout_width="163dp"
+        android:layout_height="24dp"
+        android:fontFamily="@font/architects_daughter"
+        android:text="time to burrow(in days)"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pcunits"
+        app:layout_constraintVertical_bias="0.164" />
+
+    <TextView
+        android:id="@+id/pcname"
         android:layout_width="257dp"
         android:layout_height="65dp"
         android:ems="10"
@@ -23,7 +36,7 @@
         app:layout_constraintVertical_bias="0.069" />
 
     <EditText
-        android:id="@+id/pdesc"
+        android:id="@+id/pcdesc"
         android:layout_width="229dp"
         android:layout_height="181dp"
         android:layout_marginBottom="260dp"
@@ -40,7 +53,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/punits"
+        android:id="@+id/pcunits"
         android:layout_width="229dp"
         android:layout_height="42dp"
         android:layout_marginBottom="172dp"
@@ -63,24 +76,56 @@
         android:layout_width="159dp"
         android:layout_height="17dp"
         android:layout_marginTop="56dp"
+        android:fontFamily="@font/architects_daughter"
         android:text="description:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pname"
+        app:layout_constraintTop_toBottomOf="@+id/pcname"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="102dp"
+        android:layout_height="19dp"
         android:layout_marginTop="33dp"
+        android:fontFamily="@font/architects_daughter"
         android:text="units in stock:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pdesc"
+        app:layout_constraintTop_toBottomOf="@+id/pcdesc"
         app:layout_constraintVertical_bias="0.088" />
+
+    <TextView
+        android:id="@+id/pcburrowTime"
+        android:layout_width="282dp"
+        android:layout_height="39dp"
+        android:fontFamily="@font/architects_daughter"
+        android:text="time to burrow(in days)"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/pcreserve"
+        android:layout_width="118dp"
+        android:layout_height="58dp"
+        android:fontFamily="@font/architects_daughter"
+        android:text="Reserve"
+        android:textColor="#100A0A"
+        android:textSize="18sp"
+        app:backgroundTint="#03FFFFFF"
+        app:iconTint="#0B0707"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:rippleColor="#120F0F" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
