--- a/app/src/main/res/layout/activity_update_detalis_supplier.xml
+++ b/app/src/main/res/layout/activity_update_detalis_supplier.xml
@@ -1,115 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="Activities.update_detalis_supplier">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="#fcfcfc"
+    tools:context="Activities.update_detalis_supplier">
 
-    <TextView
-        android:id="@+id/updatetitel"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="What do you want to update?"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.727"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.057" />
+        app:cardElevation="40dp"
+        app:cardCornerRadius="4dp"
+        app:cardBackgroundColor="#fff">
 
-    <EditText
-        android:id="@+id/update_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/updatetitel"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="name" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/update_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="87dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="text|textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/update_name"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints"
-        tools:text="email" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Update details"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textSize="30dp"
+                android:gravity="center_horizontal">
 
-    <EditText
-        android:id="@+id/update_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="phone"
-        android:text="Phone_number"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/update_email"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints" />
+            </TextView>
 
-    <EditText
-        android:id="@+id/update_addres"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="74dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Address"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.432"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/update_phone"
-        app:layout_constraintVertical_bias="0.0" />
+            <EditText
+                android:id="@+id/sup_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="name">
 
-    <EditText
-        android:id="@+id/update_open"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="69dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Opening time"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.432"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/update_addres"
-        app:layout_constraintVertical_bias="0.017" />
+            </EditText>
 
-    <Button
-        android:id="@+id/update_ok"
-        android:layout_width="137dp"
-        android:layout_height="50dp"
-        android:text="save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/update_open"
-        app:layout_constraintVertical_bias="0.27" />
+<!--            <EditText-->
+<!--                android:id="@+id/sup_email"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Email">-->
+
+<!--            </EditText>-->
+
+            <EditText
+                android:id="@+id/sup_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Phone">
+
+            </EditText>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <EditText
+                android:id="@+id/sup_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Address">
+
+            </EditText>
+
+
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:gravity="center"-->
+<!--                android:lineSpacingExtra="10sp"-->
+<!--                android:text="Choose the category of your gmach"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textSize="16sp" />-->
+
+<!--            <Spinner-->
+<!--                android:id="@+id/CategoryInput"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView5"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:gravity="center"-->
+<!--                android:lineSpacingExtra="10sp"-->
+<!--                android:text="Choose the location in the country"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textSize="16sp" />-->
+
+<!--            <Spinner-->
+<!--                android:id="@+id/LocationInput"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+
+            <EditText
+                android:id="@+id/OpeningTimeInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter opening time" />
+
+            <Button
+                android:id="@+id/btnUpdate"
+                android:layout_width="100dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_height="40dp"
+                android:text="Update"
+                android:layout_marginBottom="10dp"
+                android:background="#000"
+                android:textColor="#fff"
+                android:textAllCaps="false"/>
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
