--- a/app/src/main/res/layout/activity_product_details_client.xml
+++ b/app/src/main/res/layout/activity_product_details_client.xml
@@ -14,10 +14,9 @@
         android:text="time to burrow(in days)"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pcunits"
-        app:layout_constraintVertical_bias="0.164" />
+        app:layout_constraintVertical_bias="0.039" />
 
     <TextView
         android:id="@+id/pcname"
@@ -35,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.069" />
 
-    <EditText
+    <TextView
         android:id="@+id/pcdesc"
         android:layout_width="229dp"
         android:layout_height="181dp"
@@ -75,11 +74,11 @@
         android:id="@+id/textView3"
         android:layout_width="159dp"
         android:layout_height="17dp"
-        android:layout_marginTop="56dp"
         android:fontFamily="@font/architects_daughter"
         android:text="description:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pcname"
         app:layout_constraintVertical_bias="0.0" />
@@ -88,7 +87,6 @@
         android:id="@+id/textView4"
         android:layout_width="102dp"
         android:layout_height="19dp"
-        android:layout_marginTop="33dp"
         android:fontFamily="@font/architects_daughter"
         android:text="units in stock:"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,12 +118,11 @@
         android:text="Reserve"
         android:textColor="#100A0A"
         android:textSize="18sp"
-        app:backgroundTint="#03FFFFFF"
-        app:iconTint="#0B0707"
+        app:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:rippleColor="#120F0F" />
+        app:layout_constraintTop_toBottomOf="@+id/pcburrowTime"
+        app:layout_constraintVertical_bias="0.258" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
