--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -6,107 +6,124 @@
     android:layout_height="match_parent"
     tools:context="Activities.Product">
 
-    <ImageView
-        android:id="@+id/ProductImage"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.027"
-        tools:srcCompat="@color/teal_700" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="233dp">
 
-    <Button
-        android:id="@+id/AddTheProduct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:layout_marginBottom="72dp"
-        android:fontFamily="@font/architects_daughter"
-        android:text="Add"
-        android:textColor="#150F0F"
-        android:textSize="24sp"
-        app:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DaysToBurrow"
-        app:layout_constraintVertical_bias="1.0" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/ProductName"
-        android:layout_width="257dp"
-        android:layout_height="65dp"
-        android:ems="10"
-        android:fontFamily="@font/architects_daughter"
-        android:inputType="textPersonName"
-        android:paddingLeft="80px"
-        android:text="Product Name"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ProductImage"
-        app:layout_constraintVertical_bias="0.065" />
+            <ImageView
+                android:id="@+id/ProductImage"
+                android:layout_width="137dp"
+                android:layout_height="100dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.049"
+                tools:srcCompat="@color/teal_700" />
 
-    <EditText
-        android:id="@+id/ProductDescription"
-        android:layout_width="219dp"
-        android:layout_height="174dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:fontFamily="@font/architects_daughter"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:singleLine="false"
-        android:text="description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ProductName"
-        app:layout_constraintVertical_bias="0.044" />
+            <Button
+                android:id="@+id/productUpImg"
+                android:layout_width="132dp"
+                android:layout_height="79dp"
+                android:fontFamily="@font/architects_daughter"
+                android:textColor="#050202"
+                app:backgroundTint="#00FFFFFF"
+                app:icon="@android:drawable/ic_menu_upload"
+                app:layout_constraintBottom_toBottomOf="@+id/ProductImage"
+                app:layout_constraintEnd_toEndOf="@+id/ProductImage"
+                app:layout_constraintStart_toStartOf="@+id/ProductImage"
+                app:layout_constraintTop_toTopOf="@+id/ProductImage" />
 
-    <EditText
-        android:id="@+id/UnitsInStock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:fontFamily="@font/architects_daughter"
-        android:inputType="number"
-        android:paddingLeft="180px"
-        android:text="Units in stack"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ProductDescription"
-        app:layout_constraintVertical_bias="0.17" />
+            <EditText
+                android:id="@+id/ProductName"
+                android:layout_width="257dp"
+                android:layout_height="65dp"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:fontFamily="@font/architects_daughter"
+                android:inputType="textPersonName"
+                android:paddingLeft="80px"
+                android:text="Product Name"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ProductImage"
+                app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/DaysToBurrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:fontFamily="@font/architects_daughter"
-        android:inputType="number"
-        android:text="Burrow time(in days)"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/UnitsInStock"
-        app:layout_constraintVertical_bias="0.0" />
+            <EditText
+                android:id="@+id/ProductDescription"
+                android:layout_width="173dp"
+                android:layout_height="99dp"
+                android:layout_marginTop="22dp"
+                android:ems="10"
+                android:fontFamily="@font/architects_daughter"
+                android:gravity="start|top"
+                android:inputType="textMultiLine"
+                android:singleLine="false"
+                android:text="description"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ProductName"
+                app:layout_constraintVertical_bias="0.044" />
 
-    <EditText
-        android:id="@+id/editTextNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        tools:layout_editor_absoluteY="87dp" />
+            <EditText
+                android:id="@+id/UnitsInStock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:ems="10"
+                android:fontFamily="@font/architects_daughter"
+                android:inputType="number"
+                android:paddingLeft="180px"
+                android:text="Units in stock"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.535"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ProductDescription"
+                app:layout_constraintVertical_bias="0.145" />
+
+            <EditText
+                android:id="@+id/DaysToBurrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:ems="10"
+                android:fontFamily="@font/architects_daughter"
+                android:inputType="number"
+                android:text="Burrow time(in days)"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.535"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/UnitsInStock"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/AddTheProduct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:fontFamily="@font/architects_daughter"
+                android:text="Add"
+                android:textColor="#150F0F"
+                android:textSize="24sp"
+                app:backgroundTint="#00FFFFFF"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/DaysToBurrow"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
