--- a/app/src/main/res/layout/activity_supplier_register.xml
+++ b/app/src/main/res/layout/activity_supplier_register.xml
@@ -11,108 +11,134 @@
     tools:context="Activities.ClientRegister"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/SignUp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/alfa_slab_one"
-        android:gravity="center"
-        android:text="Register"
-        android:textSize="36sp" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/GmachNameInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter your gmach name" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/EmailInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="Enter Email" />
+            <TextView
+                android:id="@+id/SignUp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/alfa_slab_one"
+                android:gravity="center"
+                android:text="Register"
+                android:textSize="36sp" />
 
-    <EditText
-        android:id="@+id/PasswordInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPassword"
-        android:text="Enter Password" />
+            <EditText
+                android:id="@+id/GmachNameInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Enter your gmach name" />
 
-    <EditText
-        android:id="@+id/PhoneNumberInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="phone"
-        android:text="Enter Phone Number" />
+            <EditText
+                android:id="@+id/EmailInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:text="Enter Email" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:lineSpacingExtra="10sp"
-        android:text="Choose the category of your gmach"
-        android:textAllCaps="false"
-        android:textSize="16sp" />
+            <EditText
+                android:id="@+id/PasswordInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textPassword"
+                android:text="Enter Password" />
 
-    <Spinner
-        android:id="@+id/CategoryInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/PhoneNumberInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="phone"
+                android:text="Enter Phone Number" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:lineSpacingExtra="10sp"
-        android:text="Choose the location in the country"
-        android:textAllCaps="false"
-        android:textSize="16sp" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:lineSpacingExtra="10sp"
+                android:text="Choose the category of your gmach"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
 
-    <Spinner
-        android:id="@+id/LocationInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <Spinner
+                android:id="@+id/CategoryInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/AddressInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter Address" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:lineSpacingExtra="10sp"
+                android:text="Choose the location in the country"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/OpeningTimeInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter opening time" />
-    <Button
-        android:id="@+id/signUpSupplier"
-        android:layout_width="136dp"
-        android:layout_height="60dp"
-        android:fontFamily="@font/alfa_slab_one"
-        android:text="sign_up" />
+            <Spinner
+                android:id="@+id/LocationInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/LoginRegist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Have an Account? Sign In"
-        android:textSize="14sp" />
+            <EditText
+                android:id="@+id/AddressInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Enter Address" />
+
+            <EditText
+                android:id="@+id/OpeningTimeInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Enter opening time" />
+
+            <ImageView
+                android:id="@+id/suppImg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Button
+                android:id="@+id/uploadImg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upload Image"
+                app:icon="@android:drawable/ic_menu_upload" />
+
+            <Button
+                android:id="@+id/signUpSupplier"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:fontFamily="@font/alfa_slab_one"
+                android:text="sign_up" />
+
+            <Button
+                android:id="@+id/LoginRegist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Have an Account? Sign In"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
