--- a/app/src/main/res/layout/activity_product_details_client.xml
+++ b/app/src/main/res/layout/activity_product_details_client.xml
@@ -1,100 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Activities.ProductDetails">
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="163dp"
-        android:layout_height="24dp"
-        android:fontFamily="@font/architects_daughter"
-        android:text="time to burrow(in days)"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pcunits"
-        app:layout_constraintVertical_bias="0.039" />
+    tools:context="Activities.ProductDetailsClient"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/pcname"
-        android:layout_width="257dp"
-        android:layout_height="65dp"
+        android:layout_width="249dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:fontFamily="@font/architects_daughter"
         android:inputType="textPersonName"
         android:paddingLeft="80px"
         android:text="Product Name"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069" />
-
-    <TextView
-        android:id="@+id/pcdesc"
-        android:layout_width="229dp"
-        android:layout_height="181dp"
-        android:layout_marginBottom="260dp"
-        android:ems="10"
-        android:fontFamily="@font/architects_daughter"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:singleLine="false"
-        android:text="description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/pcunits"
-        android:layout_width="229dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="172dp"
-        android:ems="10"
-        android:fontFamily="@font/architects_daughter"
-        android:inputType="number"
-        android:paddingLeft="50px"
-        android:paddingRight="50px"
-        android:text="Units in stock"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="159dp"
         android:layout_height="17dp"
         android:fontFamily="@font/architects_daughter"
-        android:text="description:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pcname"
-        app:layout_constraintVertical_bias="0.0" />
+        android:text="description:" />
+
+    <TextView
+        android:id="@+id/pcdesc"
+        android:layout_width="229dp"
+        android:layout_height="181dp"
+        android:ems="10"
+        android:fontFamily="@font/architects_daughter"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:singleLine="false"
+        android:text="description" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="163dp"
+        android:layout_height="24dp"
+        android:fontFamily="@font/architects_daughter"
+        android:text="time to burrow(in days)" />
+
+    <TextView
+        android:id="@+id/pcunits"
+        android:layout_width="229dp"
+        android:layout_height="42dp"
+        android:ems="10"
+        android:fontFamily="@font/architects_daughter"
+        android:inputType="number"
+        android:paddingLeft="50px"
+        android:paddingRight="50px"
+        android:text="Units in stock"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="102dp"
         android:layout_height="19dp"
         android:fontFamily="@font/architects_daughter"
-        android:text="units in stock:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pcdesc"
-        app:layout_constraintVertical_bias="0.088" />
+        android:text="units in stock:" />
 
     <TextView
         android:id="@+id/pcburrowTime"
@@ -102,13 +70,7 @@
         android:layout_height="39dp"
         android:fontFamily="@font/architects_daughter"
         android:text="time to burrow(in days)"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/pcreserve"
@@ -117,12 +79,6 @@
         android:fontFamily="@font/architects_daughter"
         android:text="Reserve"
         android:textColor="#100A0A"
-        android:textSize="18sp"
-        app:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pcburrowTime"
-        app:layout_constraintVertical_bias="0.258" />
+        android:textSize="18sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
