--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -37,8 +37,8 @@
 
     <TextView
         android:id="@+id/pdesc"
-        android:layout_width="229dp"
-        android:layout_height="181dp"
+        android:layout_width="323dp"
+        android:layout_height="50dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="260dp"
         android:ems="10"
@@ -46,7 +46,7 @@
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:singleLine="false"
-        android:text="description"
+        android:text="no description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,6 @@
         android:layout_width="229dp"
         android:layout_height="42dp"
         android:layout_marginTop="3dp"
-        android:layout_marginBottom="172dp"
         android:ems="10"
         android:fontFamily="@font/architects_daughter"
         android:inputType="number"
@@ -68,7 +67,6 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.0" />
@@ -77,12 +75,11 @@
         android:id="@+id/textView3"
         android:layout_width="159dp"
         android:layout_height="17dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/architects_daughter"
         android:text="description:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pname"
         app:layout_constraintVertical_bias="0.0" />
@@ -91,7 +88,7 @@
         android:id="@+id/textView4"
         android:layout_width="102dp"
         android:layout_height="19dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/architects_daughter"
         android:text="units in stock:"
         app:layout_constraintBottom_toBottomOf="parent"
