add name main supp and client

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,16 +90,17 @@
         app:layout_constraintTop_toTopOf="@+id/mainActivity_title"
         app:layout_constraintVertical_bias="0.016" />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="413dp"
-        android:layout_height="50dp"
+    <TextView
+        android:id="@+id/cName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.186" />
+        app:layout_constraintVertical_bias="0.096" />
 
     <!--    <ListView-->
     <!--        android:id="@+id/listView1"-->
