--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -125,4 +125,24 @@
             android:id="@+id/action_Second6Fragment_to_First5Fragment"
             app:destination="@id/First5Fragment" />
     </fragment>
+    <fragment
+        android:id="@+id/First6Fragment"
+        android:name="com.example.gmach4u.First6Fragment"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/fragment_first6">
+
+        <action
+            android:id="@+id/action_First6Fragment_to_Second7Fragment"
+            app:destination="@id/Second7Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/Second7Fragment"
+        android:name="com.example.gmach4u.Second7Fragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/fragment_second7">
+
+        <action
+            android:id="@+id/action_Second7Fragment_to_First6Fragment"
+            app:destination="@id/First6Fragment" />
+    </fragment>
 </navigation>
